@@ -11,7 +11,11 @@ This package contains modules for language-dependent features of Docutils.
 
 __docformat__ = 'reStructuredText'
 
+import sys
+
 from docutils.utils import normalize_language_tag
+if sys.version_info < (2,5):
+    from docutils._compat import __import__
 
 _languages = {}
 
@@ -26,7 +30,7 @@ def get_language(language_code, reporter=None):
         if tag in _languages:
             return _languages[tag]
         try:
-            module = __import__(tag, globals(), locals())
+            module = __import__(tag, globals(), locals(), level=1)
         except ImportError:
             continue
         _languages[tag] = module
@@ -35,6 +39,6 @@ def get_language(language_code, reporter=None):
         reporter.warning(
             'language "%s" not supported: ' % language_code +
             'Docutils-generated text will be in English.')
-    module = __import__('en', globals(), locals())
+    module = __import__('en', globals(), locals(), level=1)
     _languages[tag] = module # warn only one time!
     return module
