@@ -8,7 +8,10 @@ This package contains Docutils parser modules.
 
 __docformat__ = 'reStructuredText'
 
+import sys
 from docutils import Component
+if sys.version_info < (2,5):
+    from docutils._compat import __import__
 
 
 class Parser(Component):
@@ -43,5 +46,5 @@ def get_parser_class(parser_name):
     parser_name = parser_name.lower()
     if parser_name in _parser_aliases:
         parser_name = _parser_aliases[parser_name]
-    module = __import__(parser_name, globals(), locals())
+    module = __import__(parser_name, globals(), locals(), level=1)
     return module.Parser
